@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3257 utf-8
+personal_ws-1.1 en 3258 utf-8
 AAC
 AAS
 ABI
@@ -1327,6 +1327,7 @@ UPSDESC
 UPSHOST
 UPSIMAGEPATH
 UPSLC
+UPSNOTIFY
 UPSOutletSystemOutletDelayBeforeReboot
 UPSOutletSystemOutletDelayBeforeShutdown
 UPSOutletSystemOutletDelayBeforeStartup
